--- a/.github/workflows/program_checker.yml
+++ b/.github/workflows/program_checker.yml
@@ -2,10 +2,10 @@ name: Corewar
 on:
   push:
     branches-ignore:
-      - 'ga-ignore-'
+      - 'ga-ignore-*'
   pull_request:
     branches-ingore:
-      - 'ga-ignore-'
+      - 'ga-ignore-*'
 
 env:
   EXECUTABLES: "asm/asm, corewar/corewar"
@@ -16,9 +16,7 @@ jobs:
     container: ghcr.io/epitech/coding-style-checker:latest
     steps:
       - uses: actions/checkout@v3
-      - name: Run coding style 
       - run: check.sh $(pwd) $(pwd)
-      - name: Check coding style errors
       - run: |
           FILENAME=coding-style-reports.log
           if [ ! -s "${FILENAME}" ]; then
@@ -43,13 +41,11 @@ jobs:
     needs: check_coding_style
     steps:
       - uses: actions/checkout@v3
-      - name: Run Makefile 
       - run: make
         timeout-minutes: 2
       - run: make clean
-      - name: Check executables
       - run: |
-          IFS=',' read -r -a array <<< "${{ env.EXECUTABLES }}"
+          IFS=',' read -r -a array <<< "${{ env.EXECUTABLE }}"
           for element in "${array[@]}"
           do
             echo $line
