feat(main): Add lib to corewar file

--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -9,7 +9,8 @@ SRC	=
 
 MAIN =	src/main.c
 
-INCLUDE =	include/
+INCLUDE =	include/	\
+			lib/ml_headers/
 
 NAME	=	corewar
 
@@ -22,12 +23,14 @@ OBM =	$(MAIN:.c=.o)
 all:	$(NAME)
 
 $(NAME):	$(OBJ) $(OBM)
-	gcc -o $(NAME) $(OBJ) $(OBM)
+	gcc -o $(NAME) $(OBJ) $(OBM) -Llib/ -lml_lib -lml_printf
 
 clean:
+	make clean -C lib/
 	rm -f $(OBJ) $(OBM)
 
 fclean:	clean
+	make fclean -C lib/
 	rm -f $(NAME)
 
 re: fclean all
