refactor(max_asm): Add header error management

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -9,7 +9,8 @@ SRC	=	src/op.c										\
 		src/compiler/compile_asm_code.c					\
 		\
 		src/compiler/error_handling/manage_errors.c		\
-		src/compiler/error_handling/file_is_readable.c
+		src/compiler/error_handling/file_is_readable.c	\
+		src/compiler/error_handling/header_presence.c
 
 MAIN =	src/main.c
 
