--- a/asm/Makefile
+++ b/asm/Makefile
@@ -24,7 +24,7 @@ INCLUDE =	include/	\
 
 NAME	=	asm
 
-CFLAGS = $(INCLUDE:%=-I%) -Wall -Wextra -g
+CFLAGS = $(INCLUDE:%=-I%) -Wall -Wextra
 
 OBJ	=	$(SRC:.c=.o)
 
