refactor(max_asm): Add command line error handling, only args type verification missing

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -16,7 +16,9 @@ SRC	=	src/op.c										\
 		src/compiler/error_handling/manage_errors.c		\
 		src/compiler/error_handling/file_is_readable.c	\
 		src/compiler/error_handling/header_presence.c	\
-		src/compiler/error_handling/check_cmd_err.c
+		src/compiler/error_handling/check_cmd_err.c		\
+		src/compiler/error_handling/check_cmd_content.c	\
+		src/compiler/error_handling/comment_manage.c
 
 MAIN =	src/main.c
 
