--- a/asm/Makefile
+++ b/asm/Makefile
@@ -19,7 +19,9 @@ SRC	=	src/op.c										\
 		src/compiler/error_handling/check_cmd_err.c		\
 		src/compiler/error_handling/check_cmd_content.c	\
 		src/compiler/error_handling/comment_manage.c	\
-		src/compiler/error_handling/label_management.c
+		src/compiler/error_handling/label_management.c	\
+		\
+		src/compiler/transcribe/transcribe_header.c
 
 MAIN =	src/main.c
 
