refactor(max_asm): Add prog size calculation

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -23,6 +23,8 @@ SRC	=	src/op.c										\
 		\
 		src/compiler/transcribe/transcribe_header.c		\
 		src/compiler/transcribe/calculate_prog_size.c	\
+		src/compiler/transcribe/remove_comment_to_tab.c	\
+		src/compiler/transcribe/index_management.c
 
 MAIN =	src/main.c
 
