refactor(Compilo): Add goo transcription of indirect elms only label and type of args handling is missing

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -24,7 +24,9 @@ SRC	=	src/op.c										\
 		src/compiler/transcribe/transcribe_header.c		\
 		src/compiler/transcribe/calculate_prog_size.c	\
 		src/compiler/transcribe/remove_comment_to_tab.c	\
-		src/compiler/transcribe/index_management.c
+		src/compiler/transcribe/index_management.c		\
+		src/compiler/transcribe/transcribe_body.c		\
+		src/compiler/transcribe/transcribe_values.c
 
 MAIN =	src/main.c
 
