--- a/asm/Makefile
+++ b/asm/Makefile
@@ -26,7 +26,8 @@ SRC	=	src/op.c										\
 		src/compiler/transcribe/remove_comment_to_tab.c	\
 		src/compiler/transcribe/index_management.c		\
 		src/compiler/transcribe/transcribe_body.c		\
-		src/compiler/transcribe/transcribe_values.c
+		src/compiler/transcribe/transcribe_values.c		\
+		src/compiler/transcribe/transcribe_label.c
 
 MAIN =	src/main.c
 
