--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -11,6 +11,7 @@ SRC	= 	src/doc/help.c			\
 		\
 		src/init/init_vm.c		\
 		src/init/parse_args.c	\
+		src/init/init_file_content.c	\
 		\
 		src/init/data_handling/handle_champ.c	\
 		src/init/data_handling/handle_cycles.c
