refactor(max_asm): Correct asm compiler

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -20,6 +20,7 @@ SRC	=	src/op.c										\
 		src/compiler/error_handling/check_cmd_content.c	\
 		src/compiler/error_handling/comment_manage.c	\
 		src/compiler/error_handling/label_management.c	\
+		src/compiler/error_handling/str_num.c			\
 		\
 		src/compiler/transcribe/transcribe_header.c		\
 		src/compiler/transcribe/calculate_prog_size.c	\
