--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -14,7 +14,9 @@ SRC	= 	src/doc/help.c			\
 		src/init/init_file_content.c	\
 		\
 		src/init/data_handling/handle_champ.c	\
-		src/init/data_handling/handle_cycles.c
+		src/init/data_handling/handle_cycles.c	\
+		\
+		src/process_corewar.c
 
 MAIN =	src/main.c
 
