refactor(max_vm): Add get file content and destroy function to free all the program

--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -5,16 +5,17 @@
 ## Makefile
 ##
 
-SRC	= 	src/change_endians.c	\
-		src/doc/help.c			\
+SRC	=	src/doc/help.c									\
 		\
-		src/tools/op.c			\
+		src/tools/op.c									\
+		src/tools/change_endians.c						\
+		src/tools/destroy_vm.c							\
 		\
-		src/init/init_vm.c		\
-		src/init/parse_args.c	\
-		src/init/init_file_content.c	\
+		src/init/init_vm.c								\
+		src/init/parse_args.c							\
+		src/init/init_file_content.c					\
 		\
-		src/init/data_handling/handle_champ.c	\
+		src/init/data_handling/handle_champ.c			\
 		src/init/data_handling/handle_cycles.c
 
 MAIN =	src/main.c
