reafctor(max_vm): fix filename and add beg of champion initialisation inside vm

--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -16,7 +16,9 @@ SRC	=	src/doc/help.c									\
 		src/init/init_file_content.c					\
 		\
 		src/init/data_handling/handle_champ.c			\
-		src/init/data_handling/handle_cycles.c
+		src/init/data_handling/handle_cycles.c			\
+		\
+		src/processing/add_champs_to_vm.c
 
 MAIN =	src/main.c
 
