feat(lea): added fonctionality for the command live

--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -11,6 +11,8 @@ SRC	=	src/doc/help.c									\
 		src/tools/change_endians.c						\
 		src/tools/destroy_vm.c							\
 		\
+		src/commands/live.c								\
+		\
 		src/init/init_vm.c								\
 		src/init/parse_args.c							\
 		src/init/init_file_content.c					\
