feat(lea): added the changment of carry for the command ld

--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -12,6 +12,7 @@ SRC	=	src/doc/help.c									\
 		src/tools/destroy_vm.c							\
 		\
 		src/commands/live.c								\
+		src/commands/ld.c								\
 		\
 		src/init/init_vm.c								\
 		src/init/parse_args.c							\
