--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -14,6 +14,7 @@ SRC	=	src/doc/help.c									\
 		src/commands/live.c								\
 		src/commands/ld.c								\
 		src/commands/zjmp.c								\
+		src/commands/fork.c								\
 		\
 		src/init/init_vm.c								\
 		src/init/parse_args.c							\
