refactor(morgan_vm): Add victory display function + corewar loop

--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -16,9 +16,10 @@ SRC	=	src/doc/help.c									\
 		src/init/init_file_content.c					\
 		\
 		src/init/data_handling/handle_champ.c			\
-		src/init/data_handling/handle_cycles.c	\
+		src/init/data_handling/handle_cycles.c			\
 		\
-		src/process_corewar.c
+		src/processing/process_corewar.c				\
+		src/processing/display_winner.c
 
 MAIN =	src/main.c
 
